--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25299,3 +25299,6 @@ body.avgrund-active {
 .visually-hidden{
   display:none!important;
 }
+
+/* Importing Bootstrap SCSS file. */
+@import '~bootstrap/scss/bootstrap';
