--- a/src/app/layouts/main-layout/main-layout.component.html
+++ b/src/app/layouts/main-layout/main-layout.component.html
@@ -108,6 +108,12 @@
           </a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" routerLink="/main/site-users">
+            <i class="typcn typcn-user menu-icon"></i>
+            <span class="menu-title" translate="site_users"></span>
+          </a>
+        </li>
+        <li class="nav-item">
           <a
             class="nav-link"
             data-toggle="collapse"
